Added authors Bio

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "Engineering Production-Grade Shiny Apps"
-author: "Colin Fay, Vincent Guyader, Cervan Girard, Sébastien Rochette"
+author: "Colin Fay, Sébastien Rochette, Vincent Guyader, Cervan Girard"
 date: "`r Sys.Date()`"
 documentclass: krantz
 bibliography: [book.bib, packages.bib]
@@ -66,15 +66,33 @@ This first part will be light on code: you will read more about conceptual ideas
 
 ## About the authors {-}
 
-// TODO
+
 
 <li><a href="https://colinfay.me/">Colin Fay</a></li>
 
-<li><a href="https://twitter.com/VincentGuyader">Vincent Guyader</a></li>
+Colin FAY works at ThinkR, a french agency focused on everything R-related. 
 
-<li><a href="https://twitter.com/CervanGirard">Cervan Girard</a></li>
+During the day, he helps companies to take full advantage of the power of R, by providing training (from beginner to expert), tools (packages, web apps...) and infrastructure. His main areas of expertise are data & software engineering, web applications (frontend and backend), and R in production. 
+
+During the night, Colin is also an hyperactive open source developer and an open data advocate. You can find a lot of his work on his GitHub account (https://github.com/ColinFay) and on ThinkR's account (https://github.com/thinkr-open).
+
+He is also active in the Data Science community in France, especially in his home town Rennes, where he founded the data-blogging website Data-Bzh.fr, co-founded the Breizh Data Club association, and organises the Breizh Data Club Meetups.  
 
 <li><a href="https://statnmap.com/">Sébastien Rochette</a></li>
+
+Sébastien is a data scientist at ThinkR, where he teaches anything R related from beginner to expert level, guides R developers towards implementation of best practices, and creates tailor-made R solutions for the needs of his customers.
+
+<li><a href="https://twitter.com/VincentGuyader">Vincent Guyader</a></li>
+
+ThinkR Founder, with more than 10 years of experience, and with a
+scientific and technical background, Vincent is an R-enthusiast.
+He still has his hands in the code, whether to develop applications,
+analyze data or build packages. When he’s not coding, he plays with Docker
+and manages servers.
+Meeting highly technical challenges is not incompatible with pedagogy: he
+passionately trains very diverse learner profiles at R.
+
+<li><a href="https://twitter.com/CervanGirard">Cervan Girard</a></li>
 
 ## Want to help? {-}
 
@@ -134,7 +152,6 @@ Package names are in curly brackets in code format (e.g., `{rmarkdown}`), and in
 + [Liz Roten](https://github.com/eroten){target="_blank"}, for proofreading chapter 1 and helping us with writing advices. 
 + [Dan S. Reznik](https://github.com/dan-reznik){target="_blank"}, for proof-reading the JavaScript chapter.
 
-// TODO : 
 
 ```{r index-4, include = FALSE}
 # Some internal funs
