--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -107,7 +107,7 @@ __Nothing should go to production without being tested. Nothing.__
 
 Testing production apps is a wide question and we will come back to this question in another chapter, but let's talk briefly about why using a package structure helps with testing.
 
-Frameworks for package testing are robust and widely documented in the R world, and if you choose to embrace the "Shiny App as a Package" strucutre, you do not have to put any extra-effort for testing your application back-end: use a canonical testing framework like [`{testthat}`](https://testthat.r-lib.org/). 
+Frameworks for package testing are robust and widely documented in the R world, and if you choose to embrace the "Shiny App as a Package" strucutre, you do not have to put any extra-effort for testing your application back-end: use a canonical testing framework like `{testthat}` [@R-testthat2011]. 
 Learning how to use it is not the subject of this chapter, so feel free to refer to the documentation, and see also Chapter 5 of the [workshop: "Building a package that lasts"](https://speakerdeck.com/colinfay/building-a-package-that-lasts-erum-2018-workshop?slide=107). 
 
 We will come back to testing in the "Build Yourself a Safety Net" chapter.
@@ -119,7 +119,7 @@ Most of the time, if not always, that means running it on someone else's compute
 
 #### Local deployment
 
-When adopting the package strucutre, you can use classical tools to locally install your Shiny application.
+When adopting the package structure, you can use classical tools to locally install your Shiny application.
 A Shiny App as a package can be built as a `tar.gz`, sent to your colleagues, friends, and family, and even to the CRAN. 
 It can also be installed in any R-package repository.
 You can then install your packaged application along with its dependencies using the appropriate `remotes::install_*()` command.
@@ -403,7 +403,7 @@ mod_ui("mod_ui_2", button_label = "Validate Choice, again")
 
 The __app_server__ side contains a series of `callModule(mod_server, unique_id, ...)`, also allowing additional parameters, just like any other function. 
 
-As a live example, we can have a look at [mod_dataviz.R](https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17) from the `{tidytuesday201942}` Shiny application. 
+As a live example, we can have a look at [mod_dataviz.R](https://github.com/ColinFay/tidytuesday201942/blob/master/R/mod_dataviz.R#L17) from the `{tidytuesday201942}` [@R-tidytuesday201942] Shiny application. 
 
 This application contains 6 tabs, 4 of them being pretty much alike: a side bar with inputs, an a main panel with a button and the plot. 
 This is a typical case where you should reuse modules: if two or more parts are relatively similar, it is easier to bundle it inside a reusable module, and condition the ui/server with function arguments. 
@@ -644,7 +644,7 @@ This has no other use case than your interactive application: it is not meant to
 
 + Business logic is the components with the core algorithms and functions that make your application specific to your area of work. 
 You can recognize these elements as the ones that can be run outside any interactive context. 
-This is the case for specific computation and algorithm, custom plot or `geom` for `{ggplot2}`, specific calls to a database, etc. 
+This is the case for specific computation and algorithm, custom plot or `geom` for `{ggplot2}` [@ggplot22016], specific calls to a database, etc. 
 
 These two components do not have to live together. 
 They should not live together if you want to keep your sanity when you build an app.
