--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -4,7 +4,7 @@
 knitr::opts_chunk$set(comment = "")
 ```
 
-The `{golem}` package is a framework for building production-grade Shiny Application. 
+The `{golem}` [@R-golem] package is a framework for building production-grade Shiny Application. 
 Lot of the patterns and methodologies described in this book are linked to `{golem}` and packages from the [golemverse](http://golemverse.org/).
 Of course, all the advices developed in this book will still be valid even if you are not planning on using `{golem}`.
 
@@ -93,7 +93,7 @@ The `DESCRIPTION` and `NAMESPACE` are standard package files (_i.e._ they are no
 In `DESCRIPTION`, you will add a series of metadata about your package, for example who wrote the package, what is the package version, what is its goal, who to complain to if things go wrong, and also information about external dependencies, the license, the encoding...
 
 This `DESCRIPTION` file will be filled automatically by the first function you will run in `dev/01_start.R`, and by other functions from the `dev/` scripts. 
-In other words, most of the time you will not interact with it directly, but through wrappers from `{golem}` and `{usethis}` which are listed in the `dev` scripts.
+In other words, most of the time you will not interact with it directly, but through wrappers from `{golem}` and `{usethis}` [@R-usethis] which are listed in the `dev` scripts.
 
 The `NAMESPACE` file is the file you will NEVER edit by hand!
 The `NAMESPACE` file defines how to interact with the rest of the package: what functions to import and from which package and what functions to export, _i.e._ what functions are available to the user when you do `library(golex)`. 
@@ -226,7 +226,7 @@ glue::as_glue(
 )
 ```
 
-It is based on the [`{config}`](https://github.com/rstudio/config) format, and allows you to define contexts, with values associated with these specific contexts. 
+It is based on the `{config}` [@R-config] format, and allows you to define contexts, with values associated with these specific contexts. 
 For example, in the default example: 
 
 + `default.golem_name`, `default.golem_version`, `default.app_prod` are usable across the whole life of your golem app: while developing, and also when in production. 
