--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -53,9 +53,9 @@ They are behaving like that for a lot of reason, but notably because they want t
 
 `r right_link("Don't make me think - Steve Krug", "http://sensible.com/dmmt.html")`
 
-For example, let's have a look at the user interface of `hexmake`, a Shiny app for building hex stickers, available at https://connect.thinkr.fr/hexmake/
+For example, let's have a look at the user interface of `hexmake` [@R-hexmake], a Shiny app for building hex stickers, available at https://connect.thinkr.fr/hexmake/
 
-![](img/hexmake.png
+![](img/hexmake.png)
 
 What will be your reading pattern for this application? 
 What is the first thing you will do when using this app?
@@ -71,7 +71,7 @@ For example, most of the time we will first change the package name, or upload a
 
 Once user have scanned the page, they perform the first action that seems reasonable. 
 Or as coined in "Rational Choice and the Structure of the Environment" by Herbert A. Simon, "__organisms adapt well enough to “satisfice”; they do not, in general, “optimize.”__".  
-In other words, __"As soon as we find a link that seems like it might lead to what we’re looking for, there’s a very good chance that we’ll click it"__ ('Don't make me think', Steve Krug).
+In other words, __"As soon as we find a link that seems like it might lead to what we’re looking for, there’s a very good chance that we’ll click it"__ ('Don't make me think', Steve Krug [@stevekrug2014]).
 
 What that also means is that user might perform what you'd expect to be "irrational" choices. 
 As they are scanning your application, they might do something unexpected, or use a part of your app in a way that you would not expect it to be used. 
@@ -136,7 +136,7 @@ Then the user has to restart from scratches, because there is no native way, fro
 This is a very important thing to keep in mind when building Shiny app: __once the app has failed, there is no easy way to natively get it back to the moment just before it crashed__, meaning that your users might lose a significant amount of time they have spent configuring the app.
 
 So, one good practice: try, as much as possible, to __wrap all server calls in some form of try-catch__ pattern. 
-That way, you can for example send a notification to the user if the process fails, either using `{shiny}` notification function, an external package like `{shinyalert}`, or a custom JavaScript alert like [notify.js](https://github.com/ColinFay/notifyjsexample).
+That way, you can for example send a notification to the user if the process fails, either using `{shiny}` notification function, an external package like `{shinyalert}` [@R-shinyalert], or a custom JavaScript alert like [notify.js](https://github.com/ColinFay/notifyjsexample).
 Here is a pseudo-code pattern for this using the `{attempt}` package:
 
 ```{r 06-ux-matters-2, eval = FALSE}
@@ -406,7 +406,7 @@ Yet, dynamic is not always the solution, and for several reasons.
 Dynamic elements are slower to render than fixed one. 
 Most of the time (if not always), rendering dynamic elements means that you will bind some external libraries, and maybe you will have to make R convert data from one format to another.
 For example, rendering a `{ggplot2}` plot will be faster than rendering a `ggplotly()` plot, which has to convert from one format to another^[
-Well, maybe the native `{plotly}` implementation is faster, but you get the spirit.
+Well, maybe the native `{plotly}` [@plotly2018] implementation is faster, but you get the spirit.
 ].
 
 That being said, not all visualization libraries are created equal, and choosing interactive visualization will not automatically lead to poorer performance: just keep in mind that this can happen.
